--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,50 @@ matrix:
 
   include:
     - os: linux
+      compiler: clang++-6.0
+      env: TOOLSET=clang COMPILER=clang++-6.0 CXXSTD=03,11
+      addons:
+        apt:
+          packages:
+            - clang-6.0
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-6.0
+
+    - os: linux
+      compiler: clang++-6.0
+      env: TOOLSET=clang COMPILER=clang++-6.0 CXXSTD=14,1z
+      addons:
+        apt:
+          packages:
+            - clang-6.0
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-6.0
+
+    - os: linux
+      compiler: clang++-7.0
+      env: TOOLSET=clang COMPILER=clang++-7.0 CXXSTD=03,11
+      addons:
+        apt:
+          packages:
+            - clang-7.0
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-7.0
+
+    - os: linux
+      compiler: clang++-7.0
+      env: TOOLSET=clang COMPILER=clang++-7.0 CXXSTD=14,1z
+      addons:
+        apt:
+          packages:
+            - clang-7.0
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-7.0
+
+    - os: linux
       compiler: g++-4.4
       env: TOOLSET=gcc COMPILER=g++-4.4 CXXSTD=98,0x
       addons:
