--- a/.travis.yml
+++ b/.travis.yml
@@ -28,48 +28,44 @@ matrix:
 
   include:
     - os: linux
-      compiler: clang++-6.0
-      env: TOOLSET=clang COMPILER=clang++-6.0 CXXSTD=03,11
       addons:
         apt:
-          packages:
-            - clang-6.0
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-6.0
+          packages:
+            - g++-6
+      env:
+        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
 
     - os: linux
-      compiler: clang++-6.0
-      env: TOOLSET=clang COMPILER=clang++-6.0 CXXSTD=14,1z
       addons:
         apt:
-          packages:
-            - clang-6.0
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-6.0
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
-    - os: linux
-      compiler: clang++-7.0
-      env: TOOLSET=clang COMPILER=clang++-7.0 CXXSTD=03,11
-      addons:
-        apt:
-          packages:
-            - clang-7.0
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-7.0
+    - os: osx
+      osx_image: xcode9.4.1
+      env:
+        - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
 
-    - os: linux
-      compiler: clang++-7.0
-      env: TOOLSET=clang COMPILER=clang++-7.0 CXXSTD=14,1z
-      addons:
-        apt:
-          packages:
-            - clang-7.0
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-7.0
+    - os: osx
+      osx_image: xcode9.4.1
+      env:
+        - MATRIX_EVAL="brew install gcc5 && CC=gcc-5 && CXX=g++-5"
+
+    - os: osx
+      osx_image: xcode9.4.1
+      env:
+        - MATRIX_EVAL="brew install gcc6 && CC=gcc-6 && CXX=g++-6"
+
+    - os: osx
+      osx_image: xcode9.4.1
+      env:
+        - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
 
     - os: linux
       compiler: g++-4.4
@@ -312,6 +308,9 @@ matrix:
       env: TOOLSET=clang COMPILER=clang++ CXXSTD=14,1z
       osx_image: xcode9.4.1
 
+
+before_install:
+    - eval "${MATRIX_EVAL}"
 
 install:
   - BOOST_BRANCH=develop && [ "$TRAVIS_BRANCH" == "master" ] && BOOST_BRANCH=master || true
