--- a/.travis.yml
+++ b/.travis.yml
@@ -27,23 +27,37 @@ matrix:
     - env: BOGUS_JOB=true
 
   include:
+    - os: linux
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-6.0
+          packages:
+          - clang-6.0
+          - libstdc++6
+      env:
+        - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
+        - CXXFLAGS="-stdlib=libc++"
+        - LINKER_FLAGS="-stdlib=libc++ -lc++abi"
+
     - os: osx
-      osx_image: xcode9.4.1
+      osx_image: xcode8
       env:
         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
 
     - os: osx
-      osx_image: xcode9.4.1
+      osx_image: xcode8
       env:
         - MATRIX_EVAL="brew install gcc5 && CC=gcc-5 && CXX=g++-5"
 
     - os: osx
-      osx_image: xcode9.4.1
+      osx_image: xcode8
       env:
         - MATRIX_EVAL="brew install gcc6 && CC=gcc-6 && CXX=g++-6"
 
     - os: osx
-      osx_image: xcode9.4.1
+      osx_image: xcode8
       env:
         - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
 
