--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,17 @@ matrix:
 
   include:
     - os: linux
+      compiler: clang++-7.0
+      env: TOOLSET=clang COMPILER=clang++-7.0
+      addons:
+        apt:
+          packages:
+            - clang-7.0
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-7.0
+
+    - os: linux
       compiler: clang++-6.0
       env: TOOLSET=clang COMPILER=clang++-6.0
       addons:
