--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,10 @@ matrix:
 
   include:
     - os: osx
+      env: TOOLSET=clang COMPILER=clang++ CXXSTD=03
+      osx_image: xcode7.3
+
+    - os: osx
       env: TOOLSET=clang COMPILER=clang++ CXXSTD=11
       osx_image: xcode7.3
 
